--- a/package.json
+++ b/package.json
@@ -10,10 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.1",
     "@supabase/supabase-js": "^2.55.0",
+    "@types/node": "^24.3.0",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-hook-form": "^7.62.0",
+    "recharts": "^3.1.2",
+    "yup": "^1.7.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
