--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.62.0",
+    "rechart": "^0.0.1",
     "recharts": "^3.1.2",
     "yup": "^1.7.0"
   },
